# picture-monster

./: .gitignore  LICENSE  README  README.md  picture-monster.1  picture-monster.cabal  stack.yaml
src/: Main.hs
src/PictureMonster/: Crawler.hs  Data.hs  Downloader.hs  Network.hs  Parallel.hs  Parser.hs  Pooling.hs  Serializer.hs
