name:                picture-monster
version:             0.1.0.0
synopsis:            Web crawler and image downloader utility
homepage:            https://github.com/bdach/picture-monster#readme
license:             BSD3
license-file:        LICENSE
author:              Bartłomiej Dach
maintainer:          dach.bartlomiej@gmail.com
copyright:           2018 Bartłomiej Dach
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable picture-monster
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       PictureMonster.Data
  default-language:    Haskell2010
  build-depends:       base                 >= 4.7 && < 5,
                       bytestring           >= 0.10.8.2,
                       http-streams         >= 0.8.6.1,
                       hxt                  >= 9.3.1.16,
                       network-uri          >= 2.6.1.0,
                       optparse-applicative >= 0.14.2.0,
                       parallel-io          >= 0.3.3,
                       transformers         >= 0.5.2.0

