name:                picture-monster
version:             0.1.0.0
synopsis:            Web crawler and image downloader utility
homepage:            https://github.com/bdach/picture-monster#readme
license:             BSD3
license-file:        LICENSE
author:              Bartłomiej Dach
maintainer:          dach.bartlomiej@gmail.com
copyright:           2018 Bartłomiej Dach
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable picture-monster
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       PictureMonster.Crawler
                       PictureMonster.Data
                       PictureMonster.Parallel
  default-language:    Haskell2010
  build-depends:       base                 >= 4.7 && < 5,
                       containers           >= 0.5.10.2,
                       http-conduit         >= 2.3.1,
                       html-conduit         >= 1.3.0,
                       network-uri          >= 2.6.1.0,
                       optparse-applicative >= 0.14.2.0,
                       parallel-io          >= 0.3.3,
                       text                 >= 1.2.3.0,
                       transformers         >= 0.5.2.0,
                       xml-conduit          >= 1.8.0
  ghc-options:         -threaded

